nextcloud-platform/platform/pgbouncer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: nextcloud-platform
  labels:
    app.kubernetes.io/name: pgbouncer
    app.kubernetes.io/component: database-proxy
spec:
  type: ClusterIP
  ports:
    - name: pgbouncer
      port: 5432
      targetPort: pgbouncer
      protocol: TCP
    - name: metrics
      port: 9127
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: pgbouncer
    app.kubernetes.io/component: database-proxy
